Modernise - more code cleaning